--- a/index.html
+++ b/index.html
@@ -93,10 +93,98 @@
 	</button>
   </div>
 
-<section class="main">
+
+ <section class="main">
 		
-		
-		<!-- blogs -->
+		<div class="about-dlcf details">
+			<h3>About DLCF Ogbomoso</h3>
+			<img src="./img/display2.jpeg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+
+		<div class="weekly-activities details">
+			<h3>Our Weekly Activities</h3>
+			
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Sunday Worship Service</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Monday Bible Study</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Thursday Revival Hour</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+		</div>
+
+		<div class="weekly-activities details">
+			<h3>Special Programmes</h3>
+			
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Monthly Global Crusade</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Monthly Global Crusade</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+			<div class="img8capt">
+				<img src="./img/display2.jpeg">
+				<h4>Monthly Global Crusade</h4>
+				<p>It's always a moment of expository study of God's Word with pastor W.F Kumuyi.</p>
+			</div>
+		</div>
+
+		<div class="pastors details">
+			<h3>Meet Our Pastors</h3>
+			<div class="column">
+				<div class="card">
+					<img src="./img/display2.jpeg" width="200px">
+					<div>
+						<h3>Pastor Ojebiyi</h3>
+						<p>Regional Coordinator</p>
+						<p>Contact</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="column">
+				<div class="card">
+					<img src="./img/display2.jpeg" width="200px">
+					<div>
+						<h3>Pastor Ojebiyi</h3>
+						<p>Regional Coordinator</p>
+						<p>Contact</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="column">
+				<div class="card">
+					<img src="./img/display2.jpeg" width="200px">
+					<div>
+						<h3>Pastor Ojebiyi</h3>
+						<p>Regional Coordinator</p>
+						<p>Contact</p>
+					</div>
+				</div>
+			</div>			
+		</div>
+
+
+		<!-- blogs --
 		<h2>Life Blogs and Stories</h2>
 		<h4>Find life-inspiring articles and contents here.</h4>
 		<div class="details">
@@ -122,7 +210,7 @@ Eternity comes immediately after death and that is why this question is coming t
 
 Some people keep asking wanting to know the exact location of heaven and hell.<br>
 
-Dear friend, the exact location is not a question we(<--insert modal button here--!>)(<-- and then the box containing the remainder of the story--!>h) need to concentrate on. Let's leave the location and look into this; 
+Dear friend, the exact location is not a question we(insert modal button here--)(<-- and then the box containing the remainder of the story) need to concentrate on. Let's leave the location and look into this; 
 
 Heaven is an holy place, it is a place filled with peace, love and happiness while hell is a place of torment.
 
@@ -174,7 +262,7 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="link"><a href="Blogs.html">Read more stories</a></div><br>
 		<br>
 		<hr class="rounded">
-		<!-- library -->
+		<!-- library --
 		<h2>Library</h2>
 		<h4>Academic, Spiritual, Financial Books And Study Materials.
 						 </h4>
@@ -186,13 +274,13 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="link"><a href="Library.html">Go To Library</a></div><br>
 		<br>
 		<hr class="rounded">
-		<!-- bookstore -->
+		<!-- bookstore --
 		<h2>Colporteur</h2>
 <div class="details">
 						<h4>Order Books At The DLCF Colporteur Stand From Here.</h3>
 		</div>
 		<div class="link"><a href="Bookstore.html">Go To Bookstore</a></div><br>
-</section>
+</section> -->
 
 <br>
 <br>
@@ -200,16 +288,30 @@ WHERE WILL YOU SPEND ETERNITY?
 <section id="help">
 		<div class="location">
 						<h2>Our Worship Centres</h2>
+				<div class="Adenike cluster clearfix">
 						<h4>Adenike Cluster: </h4>
-						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Canaan Land District</a></h5>
-						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">L.H District</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Canaan Land Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Camp Zion Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Bethel Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">L.H Center</a></h5>
+				</div>
+				<div class="Under-G cluster clearfix">
 						<h4>Under-G Cluster:</h4>
-						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Mount Zion District</a></h5>
-						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Glory Land District</a></h5>
+						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Mount Zion Center</a></h5>
+						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Glory Land Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Goodness Center</a></h5>
+				</div>
+				<div class="Town cluster clearfix">
 						<h4>Town Cluster:</h4>
-						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Olukoko District</a></h5>
-						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Bethel District, along Laguna beach</a></h5>
+						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Olukoko Center</a></h5>
+						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Higher Ground Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">General Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Peculiar Center</a></h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">LTH Center</a></h5>
+				</div>
 		</div>
+
+		<div class="clearfix"></div>
 		<hr class="rounded">
 		<div>
 			<!-- Announcements and Updates box here-->
