--- a/index.html
+++ b/index.html
@@ -149,38 +149,26 @@
 
 		<div class="pastors details">
 			<h3>Meet Our Pastors</h3>
-			<div class="column">
-				<div class="card">
-					<img src="./img/display2.jpeg" width="200px">
-					<div>
-						<h3>Pastor Ojebiyi</h3>
-						<p>Regional Coordinator</p>
-						<p>Contact</p>
-					</div>
-				</div>
+				<div class="img8capt big-width">
+				<img src="./img/display2.jpg">
+				<h4>Pastor Ojebiyi</h4>
+				<p>Regional Coordinator, DLCF Ogbomoso</p>
 			</div>
-
-			<div class="column">
-				<div class="card">
-					<img src="./img/display2.jpeg" width="200px">
-					<div>
-						<h3>Pastor Ojebiyi</h3>
-						<p>Regional Coordinator</p>
-						<p>Contact</p>
-					</div>
-				</div>
+			<div class="img8capt big-width">
+				<img src="./img/display2.jpg">
+				<h4>Pastor Oladele</h4>
+				<p>Regional Coordinator, DLCF Ogbomoso</p>
 			</div>
-
-			<div class="column">
-				<div class="card">
-					<img src="./img/display2.jpeg" width="200px">
-					<div>
-						<h3>Pastor Ojebiyi</h3>
-						<p>Regional Coordinator</p>
-						<p>Contact</p>
-					</div>
-				</div>
-			</div>			
+			<div class="img8capt big-width">
+				<img src="./img/display2.jpg">
+				<h4>Pastor Adetola</h4>
+				<p>Regional Coordinator, DLCF Ogbomoso</p>
+			</div>
+				<div class="img8capt big-width">
+				<img src="./img/display2.jpg">
+				<h4>Pastor Busayo</h4>
+				<p>Regional Coordinator, DLCF Ogbomoso</p>
+			</div>
 		</div>
 
 
