--- a/Bookstore.html
+++ b/Bookstore.html
@@ -40,6 +40,9 @@
 					  <a class="nav-link active" href="Bookstore.html">Bookshop</a>
 					</li>
 					<li class="nav-item">
+				<a class="nav-link" href="Archive.html">Archives</a>
+			  </li>
+					<li class="nav-item">
 					  <a class="nav-link" href="help.html">Helps</a>
 					</li>
 					
@@ -76,7 +79,7 @@
 		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
-        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <p class="card-text txt-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#">Download</a>
       </div>
     </div>
