--- a/Blogs.html
+++ b/Blogs.html
@@ -39,6 +39,9 @@
 				<a class="nav-link" href="Bookstore.html">Bookshop</a>
 			  </li>
 			  <li class="nav-item">
+				<a class="nav-link" href="Archive.html">Archives</a>
+			  </li>
+			  <li class="nav-item">
 				<a class="nav-link" href="help.html">Helps</a>
 			  </li>
 			  
@@ -55,7 +58,7 @@
 
 <br>
 
-	<nav aria-label="..." class="pagination-widh">
+	<nav aria-label="..." >
   <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item disabled">
       <a class="page-link" href="#">Previous</a>
@@ -262,7 +265,7 @@ WHERE WILL YOU SPEND ETERNITY?
 #Day6of7</p>
 					   </div>
 					   <br>
-	<nav aria-label="..." class="paginaion-width">
+	<nav aria-label="..." >
   <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item">
       <a class="page-link" href="#">Previous</a>
