--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<a class="nav-link" href="Bookstore.html">Bookshop</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="Events.html">Events</a>
+				<a class="nav-link" href="Archive.html">Archives</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="help.html">Helps</a>
