--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
 </head>
-<body>									
+<body>
+	<div id="preloader">
+
+	</div>					
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
@@ -92,7 +95,12 @@
 	  <span class="visually-hidden">Next</span>
 	</button>
   </div>
-
+<section id="bible-verse">
+	<h3>
+		<script src="https://www.biblegateway.com/votd/votd.write.callback.js"></script>
+	<script src="https://www.biblegateway.com/votd/get/?format=json&version=AKJV&callback=BG.votdWriteCallback"></script>
+	</h3>
+</section>
 
  <section class="main">
 		
@@ -336,6 +344,12 @@ WHERE WILL YOU SPEND ETERNITY?
 <br><br>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script>
+	var loader = document.getElementById("preloader");
+	window.addEventListener("load", function(){
+		loader.style.display = "none";
+	})
+</script>
 </body>
 <footer>
 	<p>DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech.<br>© Copyright 2022 </p>
