--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 	<title>DLCF OGBOMOSO</title>
 </head>
 <body>
-	<div id="preloader">
+<div id="preloader">
 
-	</div>					
+	</div>
+
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
@@ -38,9 +39,9 @@
 			  <li class="nav-item">
 				<a class="nav-link" href="Library.html">Library</a>
 			  </li>
-			  <li class="nav-item">
+			  <!--<li class="nav-item">
 				<a class="nav-link" href="Bookstore.html">Bookshop</a>
-			  </li>
+			  </li> -->
 			  <li class="nav-item">
 				<a class="nav-link" href="Archive.html">Archives</a>
 			  </li>
@@ -95,6 +96,7 @@
 	  <span class="visually-hidden">Next</span>
 	</button>
   </div>
+
 <section id="bible-verse">
 	<h3>
 		<script src="https://www.biblegateway.com/votd/votd.write.callback.js"></script>
