--- a/Library.html
+++ b/Library.html
@@ -36,9 +36,12 @@
 					<li class="nav-item">
 					  <a class="nav-link active" href="Library.html">Library</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 					  <a class="nav-link" href="Bookstore.html">Bookshop</a>
-					</li>
+					</li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="Archive.html">Archives</a>
+          </li>
 					<li class="nav-item">
 					  <a class="nav-link" href="help.html">Helps</a>
 					</li>
@@ -143,7 +146,7 @@
 
   <div class="clearfix"></div>
 	<br><br> 
- <h2 class="text-center">AllEbooks</h2>
+ <h2 class="text-center">All Ebooks</h2>
 	  
 
   <div class="books">
@@ -409,7 +412,7 @@
 	<div class="text-centerr">
 		<h3>Academic</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#">Click here</a>
+		<a href="./Academic.html">Click here</a>
 	</div>
 	<br>
 	<div class="text-centerr">
