--- a/help.html
+++ b/help.html
@@ -14,10 +14,10 @@
 	<title>DLCF OGBOMOSO</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-md navbar-light bg-light">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="index.html">
-			  <img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
+			  <img src="./img/favicon.jpeg" alt="" width="35px" style="margin-top: 10px; float: left;">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="Blogs.html">Blogs</a>
@@ -34,11 +34,14 @@
 					<li class="nav-item">
 					  <a class="nav-link" href="Library.html">Library</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 					  <a class="nav-link" href="Bookstore.html">Bookshop</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
-					  <a class="nav-link" href="help.html">Help & Enquiries</a>
+          		      <a class="nav-link" href="Archive.html">Archives</a>
+        		    </li>
+					<li class="nav-item">
+					  <a class="nav-link active" href="help.html">Helps</a>
 					</li>
 					
 				  </ul>
@@ -52,6 +55,14 @@
 			  <h3>Lautech Chapter, Ogbomoso</h3>
 	  </div>
 <h3 style="color: #121d6e; margin:15px;  "><marquee direction="right">This page is under construction</marquee></h3>
+
+<a href="./Discipleship-Training-Website/exam-page.html">exam-page</a>
+
+<a href="./Discipleship-Training-Website/students-page.html">students-page</a>
+<a href="./Discipleship-Training-Website/post-exam-page.html">post-exam-page</a>
+<a href="./Discipleship-Training-Website/pre-exam-page.html">pre-exam-page</a>
+<a href="./Discipleship-Training-Website/signup.html">signup</a>
+<a href="./Discipleship-Training-Website/login.html">login</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
